@@ -1,0 +1,48 @@
+system_administrator.description=Configures the technical system level properties and behavior of the applications (i.e. the password policy, email setup, ESB, etc).
+business_administrator.description=Manages the domain related application wide properties and behavior (i.e. label names, reference data lists, etc).
+person_and_organization_information_manager.description=Manages organizations and rosters.  Creates and updates person info including contact info, degrees/certifications, rosters they're associated with.
+person_and_organization_information_manager.scopes=site
+data_importer.description=Identifies studies defined by Coordinating Center and imports as a consumer that data defined elsewhere.
+user_administrator.description=Ability to read system personnel (research staff and investigators) and create/manage user accounts/application roles.
+user_administrator.scopes=site
+study_qa_manager.description=Updates core study info after saving or opening a study.  Reviews and makes available study calendar templates to participating sites.
+study_qa_manager.displayName=Study QA Manager
+study_qa_manager.scopes=site
+study_creator.description=Creates the core study info (e.g. PI, title, description, phase, epochs/arms & basic study design, etc.).
+study_creator.scopes=site
+supplemental_study_information_manager.description=Adds treatment assignment, drugs, adEERS-specific diseases, adEERs reporting criteria, CTC/MedDRA version, etc.  Update/manage registration metadata (e.g. stratifications, eligibility criteria, nnotifications, target accrual, multi-institutional indicator, consent form version, study randomized indicator, etc.)
+supplemental_study_information_manager.scopes=site study
+study_team_administrator.description=Connects study level people to study and internal staff to study; Assigns internal staff to protocol, determines study artifact accessiblity for staff (e.g. study calendar templates, CRFs, etc.).
+study_team_administrator.scopes=site study
+study_site_participation_administrator.description=Connects participating sites to a protocol.
+study_site_participation_administrator.scopes=site
+ae_rule_and_report_manager.description=Creates, manages, imports AE rules and AE report definitions.
+ae_rule_and_report_manager.displayName=AE Rule and Report Manager
+ae_rule_and_report_manager.scopes=site study
+study_calendar_template_builder.description=Creates and updates study calendar templates.
+study_calendar_template_builder.scopes=site study
+registration_qa_manager.description=Updates registration information (study subject ID, Date of consent) after enrollment. Can waive the eligibility criteria for certain study subjects.
+registration_qa_manager.displayName=Registration QA Manager
+registration_qa_manager.scopes=site
+subject_manager.description=Defines patient to system (remaining subject data managed by other roles).
+subject_manager.scopes=site
+study_subject_calendar_manager.description=Creates and updates a subject-specific study calendar based on a study calendar template.
+study_subject_calendar_manager.scopes=site study
+registrar.description=Accepts and approves/denies subject registration requests; requests subject registration on a particular study.
+registrar.scopes=site study
+ae_reporter.description=Creates and updates info about all AEs that need to be reported.  Submits report to appropriate parties per report definition. Enters set of required AEs to be assessed and any other AEs that patient experienced.
+ae_reporter.displayName=AE Reporter
+ae_reporter.scopes=site study
+expedited_report_reviewer.description=Read-only: reviews, provides comments, and routes expedited reports through the review workflow.
+expedited_report_reviewer.scopes=site study
+adverse_event_study_data_reviewer.description=Read-only: reviews, provides comments, and adverse event data through a review workflow.
+adverse_event_study_data_reviewer.displayName=AE Study Data Reviewer
+adverse_event_study_data_reviewer.scopes=site study
+lab_impact_calendar_notifier.description=Creates a calendar notification for a potential lab-based treatment modification.
+lab_impact_calendar_notifier.scopes=site study
+lab_data_user.description=Enters, edits, and imports labs from LIMS, viewing labs, selecting and sending labs to CDMS and caAERS.
+lab_data_user.scopes=site study
+data_reader.description=Read-only: has read access to directly-entered application data within a certain study or site.
+data_reader.scopes=site study
+data_analyst.description=Read-only: searches for data, uses built-in analysis tools, exports data to third party tools.
+data_analyst.scopes=site study
